--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
       </div>
       </header>  -->
     <main>
-      <!-- <section class="filter section">
+      <section class="filter section">
       <div class="container" >
       <h1 class="visually-hidden">Портфоліо</h1>
       <ul class="filter-list">
@@ -40,7 +40,7 @@
       <li class="filter-list__item"><button type="button" class="filter-list__button button filter-list__text button-text">Додатки</button></li>
       <li class="filter-list__item"><button type="button" class="filter-list__button button filter-list__text button-text">Дизайн</button></li>
       <li class="filter-list__item"><button type="button" class="filter-list__button button filter-list__text button-text">Маркетинг</button></li>
-      </ul> -->
+      </ul>
       <ul class="projects">
         <li class="projects__item">
           <a href="#" class="projects__link">
