--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li class="site-nav__item"><a href="./portfolio.html" class="link site-nav__link">Портфоліо</a></li>
       <li class="site-nav__item"><a href="./" class="link site-nav__link">Контакти</a></li>
     </ul>
+    <button js-open-menu type="button" class="mobmenu__open"><svg width="24" height="24" class="open-icon"><use href="./image/icons.svg#icon-mobmenu"></use></svg></button>
     </nav>
     <div class="site-contact">
     <ul class="site-contact__list">
@@ -28,9 +29,9 @@
       <li class="site-contact__item"><a class="link site-contact__link" href="tel:+380961111111"><svg class="site-contact__icon" width="10" height="16"><use href="./image/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a></li>
     </ul>
     </div>
-    <button js-open-menu type="button" class="mobmenu__open"><svg width="24" height="24" class="open-icon"><use href="./image/icons.svg#icon-mobmenu"></use></svg></button>
-    <div class="mobmenu is-open" js-menu-container>
-      <div class="container">
+    <!-- <button js-open-menu type="button" class="mobmenu__open"><svg width="24" height="24" class="open-icon"><use href="./image/icons.svg#icon-mobmenu"></use></svg></button> -->
+    <div class="mobmenu">
+      <div class="container is-open" js-menu-container>
     <div class="mobmenu__top">
       <button js-close-menu type="button" class="mobmenu__close"><svg width="19" height="19" class="close-icon"><use href="./image/icons.svg#icon-close"></use></svg></button>
       <ul class="mobmenu__list">
