--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
     </div>
   </section>
   </main>
-  <!-- <footer class="page-footer">
-    <div class="container page-footer__content">
+  <footer class="page-footer">
+    <div?Ю class="container page-footer__content">
       <div class="page-footer__connection">
       <a href="./" class="emblem page-footer__logo"><span class="web">Web</span><span class="studio studio--inverse">Studio</span></a>
       <address>
@@ -393,7 +393,7 @@
         </form>
       </div>
     </div>
-  </footer> -->
+  </footer>
 <div class="backdrop is-hidden" data-modal>
   <div class="modal">
     <button data-modal-close class="modal__button"><svg width="11" height="11" class="modal__close"><use href="./image/icons.svg#icon-close"></use>
