--- a/portfolio.html
+++ b/portfolio.html
@@ -211,7 +211,7 @@
       </div>
     </section>
     </main>
-    <!-- <footer class="page-footer">
+    <footer class="page-footer">
       <div class="container page-footer__content">
       <div class="page-footer__connection">
       <a href="./" class="emblem page-footer__logo"><span class="web">Web</span><span class="studio studio--inverse">Studio</span></a>
@@ -268,7 +268,7 @@
         </form>
       </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="mobmenu is-open js-menu-container">
       <div class="container">
     <div class="mobmenu__top">
