--- a/portfolio.html
+++ b/portfolio.html
@@ -269,7 +269,7 @@
       </div>
       </div>
     </footer>
-    <div class="mobmenu is-open js-menu-container">
+    <div class="mobmenu js-menu-container">
       <div class="container">
     <div class="mobmenu__top">
       <button type="button" class="mobmenu__close js-close-menu"><svg width="19" height="19" class="close-icon"><use href="./image/icons.svg#icon-close"></use></svg></button>
