--- a/portfolio.html
+++ b/portfolio.html
@@ -217,9 +217,9 @@
       <a href="./" class="emblem page-footer__logo"><span class="web">Web</span><span class="studio studio--inverse">Studio</span></a>
       <address>
         <ul class="page-footer__list">
-          <li class="page-footer__item"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="communications page-footer__adress">м. Київ, пр-т Лесі Українки, 26</a>  </li>
-          <li class="page-footer__item"><a href="mailto:info@devstudio.com" class="communications page-footer__contact">info@devstudio.com</a></li>
-          <li class="page-footer__item"><a href="tel:+380961111111" class="communications page-footer__contact">+38 096 111 11 11</a></li>
+          <li class="page-footer__item"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="link communications page-footer__adress">м. Київ, пр-т Лесі Українки, 26</a>  </li>
+          <li class="page-footer__item"><a href="mailto:info@devstudio.com" class="link communications page-footer__contact">info@devstudio.com</a></li>
+          <li class="page-footer__item"><a href="tel:+380961111111" class="link communications page-footer__contact">+38 096 111 11 11</a></li>
         </ul>
       </address>
       </div>
