--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </nav>
     <div class="site-contact">
     <ul class="site-contact__list">
-      <li class="site-contact__item"><a class="link site-contact__link" href="mailto:info@devstudio.com"><svg class="site-contact__icon" width="16" height="12"><use href="./image/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a></li>
-      <li class="site-contact__item"><a class="link site-contact__link" href="tel:+380961111111"><svg class="site-contact__icon" width="10" height="16"><use href="./image/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a></li>
+      <li class="site-contact__item"><a class="link site-contact__link" href="mailto:info@devstudio.com"><svg class="site-contact__icon envelope"><use href="./image/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a></li>
+      <li class="site-contact__item"><a class="link site-contact__link" href="tel:+380961111111"><svg class="site-contact__icon smartphone"><use href="./image/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a></li>
     </ul>
     </div>
     </div>
@@ -337,7 +337,7 @@
   </section>
   </main>
   <footer class="page-footer">
-    <div?Ю class="container page-footer__content">
+    <div class="container page-footer__content">
       <div class="page-footer__connection">
       <a href="./" class="emblem page-footer__logo"><span class="web">Web</span><span class="studio studio--inverse">Studio</span></a>
       <address>
