--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <ul class="do__list">
       <li class="do__item">
         <div class="do__thumb">
-        <img srcset="./image/box1desk1.jpg 1x, ./image/box1desk2.jpg 2x" 
-        scr="./image/box1desk1.jpg"
+        <img srcset="./image/box1desk1.jpg 1x,./image/box1desk2.jpg 2x" 
+        src="./image/box1desk1.jpg"
         alt="людина друкує на клавіатурі" width="370" height="294" class="image">
         <div class="do__meta">
           <p class="do__text">ДЕКСТОПНІ ДОДАТКИ</p></div>
@@ -116,9 +116,9 @@
     <ul class="team__list">
       <li class="team__item">
         <picture>
-          <source srcset="./image/teamcard1desk1.jpg 1x, ./image/teamcard1desk2.jpg 2x" media="(min-width:1200px)"/>
-          <source srcset="./image/teamcard1tab1.jpg 1x, ./image/teamcard1tab2.jpg 2x" media="(min-width:768px)"/>
-          <source srcset="./image/teamcard1mob1.jpg 1x, ./image/teamcard1mob2.jpg 2x" media="(max-width:767px)"/>
+          <source srcset="./image/teamcard1desk1.jpg 1x, ./image/teamcard1desk2.jpg 2x" media="(min-width:1200px)">
+          <source srcset="./image/teamcard1tab1.jpg 1x, ./image/teamcard1tab2.jpg 2x" media="(min-width:768px)">
+          <source srcset="./image/teamcard1mob1.jpg 1x, ./image/teamcard1mob2.jpg 2x" media="(max-width:767px)">
           <img src="./image/teamcard1mob1.jpg" alt="чоловік шатен в окулярах" width="450" class="image">
         </picture>
         <div class="team__text team-sub">
@@ -158,9 +158,9 @@
       </li>
       <li class="team__item">
         <picture>
-          <source srcset="./image/teamcard2desk1.jpg 1x, ./image/teamcard2desk2.jpg 2x" media="(min-width:1200px)"/>
-          <source srcset="./image/teamcard2tab1.jpg 1x, ./image/teamcard2tab2.jpg 2x" media="(min-width:768px)"/>
-          <source srcset="./image/teamcard2mob1.jpg 1x, ./image/teamcard2mob2.jpg 2x" media="(max-width:767px)"/>
+          <source srcset="./image/teamcard2desk1.jpg 1x, ./image/teamcard2desk2.jpg 2x" media="(min-width:1200px)">
+          <source srcset="./image/teamcard2tab1.jpg 1x, ./image/teamcard2tab2.jpg 2x" media="(min-width:768px)">
+          <source srcset="./image/teamcard2mob1.jpg 1x, ./image/teamcard2mob2.jpg 2x" media="(max-width:767px)">
           <img src="./image/teamcard2mob1.jpg" alt="жінка блондинка в окулярах" width="450" class="image">
         </picture>
         <div class="team__text">
@@ -200,9 +200,9 @@
       </li>
       <li class="team__item">
         <picture>
-          <source srcset="./image/teamcard3desk1.jpg 1x, ./image/teamcard3desk2.jpg 2x" media="(min-width:1200px)"/>
-          <source srcset="./image/teamcard3tab1.jpg 1x, ./image/teamcard3tab2.jpg 2x" media="(min-width:768px)"/>
-          <source srcset="./image/teamcard3mob1.jpg 1x, ./image/teamcard3mob2.jpg 2x" media="(max-width:767px)"/>
+          <source srcset="./image/teamcard3desk1.jpg 1x, ./image/teamcard3desk2.jpg 2x" media="(min-width:1200px)">
+          <source srcset="./image/teamcard3tab1.jpg 1x, ./image/teamcard3tab2.jpg 2x" media="(min-width:768px)">
+          <source srcset="./image/teamcard3mob1.jpg 1x, ./image/teamcard3mob2.jpg 2x" media="(max-width:767px)">
           <img src="./image/teamcard3mob1.jpg" alt="чоловік шатен в блакитній сорочці" width="450" class="image">
         </picture>
         <div class="team__text">
@@ -242,9 +242,9 @@
       </li>
       <li class="team__item">
         <picture>
-          <source srcset="./image/teamcard4desk1.jpg 1x, ./image/teamcard4desk2.jpg 2x" media="(min-width:1200px)"/>
-          <source srcset="./image/teamcard4tab1.jpg 1x, ./image/teamcard4tab2.jpg 2x" media="(min-width:768px)"/>
-          <source srcset="./image/teamcard4mob1.jpg 1x, ./image/teamcard4mob2.jpg 2x" media="(max-width:767px)"/>
+          <source srcset="./image/teamcard4desk1.jpg 1x, ./image/teamcard4desk2.jpg 2x" media="(min-width:1200px)">
+          <source srcset="./image/teamcard4tab1.jpg 1x, ./image/teamcard4tab2.jpg 2x" media="(min-width:768px)">
+          <source srcset="./image/teamcard4mob1.jpg 1x, ./image/teamcard4mob2.jpg 2x" media="(max-width:767px)">
           <img src="./image/teamcard4mob1.jpg" alt="бородатий чоловік брюнет в окулярах" width="450" class="image">
         </picture>
         <div class="team__text">
