--- a/portfolio.html
+++ b/portfolio.html
@@ -44,12 +44,12 @@
       </ul>
       <ul class="projects">
         <li class="projects__item">
-          <a href="#" class="projects__link">
+          <a href="#" class="link projects__link">
             <div class="projects__thumb">
               <picture>
-                <source srcset="./image/technokryakdesk1.jpg 1x, ./image/technokryakdesk2.jpg 2x" media="(min-width:1200px)"/>
-                <source srcset="./image/technokryaktab1.jpg 1x, ./image/technokryaktab2.jpg 2x" media="(min-width:768px)"/>
-                <source srcset="./image/technokryakmob1.jpg 1x, ./image/technokryakmob2.jpg 2x" media="(max-width:767px)"/>
+                <source srcset="./image/technokryakdesk1.jpg 1x, ./image/technokryakdesk2.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./image/technokryaktab1.jpg 1x, ./image/technokryaktab2.jpg 2x" media="(min-width:768px)">
+                <source srcset="./image/technokryakmob1.jpg 1x, ./image/technokryakmob2.jpg 2x" media="(max-width:767px)">
                 <img src="./image/technokryakmob1.jpg" alt="ноутбук з фото працівників" width="450" class="image">
               </picture>
           <div class="projects__overlay"><p class="projects__description">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
@@ -61,14 +61,14 @@
           </a>
         </li>
         <li class="projects__item">
-          <a href="#" class="projects__link">
-            <div class="projects__thumb">
-              <picture>
-                <source srcset="./image/posterdesk1.jpg 1x, ./image/posterdesk2.jpg 2x" media="(min-width:1200px)"/>
-                <source srcset="./image/postertab1.jpg 1x, ./image/postertab2.jpg 2x" media="(min-width:768px)"/>
-                <source srcset="./image/postermob1.jpg 1x, ./image/postermob2.jpg 2x" media="(max-width:767px)"/>
-                <img src="./image/postermob1.jpg" alt="двоє хлопців грають у баскетбол" width="450" class="image">
-              </picture>
+            <a href="#" class="link projects__link">
+              <div class="projects__thumb">
+                <picture>
+                  <source srcset="./image/posterdesk1.jpg 1x, ./image/posterdesk2.jpg 2x" media="(min-width:1200px)">
+                  <source srcset="./image/postertab1.jpg 1x, ./image/postertab2.jpg 2x" media="(min-width:768px)">
+                  <source srcset="./image/postermob1.jpg 1x, ./image/postermob2.jpg 2x" media="(max-width:767px)">
+                  <img src="./image/postermob1.jpg" alt="двоє хлопців грають у баскетбол" width="450" class="image">
+               </picture>
               <div class="projects__overlay"><p class="projects__description">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
             </div>
             <div class="projects__text">
@@ -78,12 +78,12 @@
           </a>
         </li>
         <li class="projects__item">
-          <a href="#" class="projects__link">
+          <a href="#" class="link projects__link">
             <div class="projects__thumb">
               <picture>
-                <source srcset="./image/restaurantdesk1.jpg 1x, ./image/restaurantdesk2.jpg 2x" media="(min-width:1200px)"/>
-                <source srcset="./image/restauranttab1.jpg 1x, ./image/restauranttab2.jpg 2x" media="(min-width:768px)"/>
-                <source srcset="./image/restaurantmob1.jpg 1x, ./image/restaurantmob2.jpg 2x" media="(max-width:767px)"/>
+                <source srcset="./image/restaurantdesk1.jpg 1x, ./image/restaurantdesk2.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./image/restauranttab1.jpg 1x, ./image/restauranttab2.jpg 2x" media="(min-width:768px)">
+                <source srcset="./image/restaurantmob1.jpg 1x, ./image/restaurantmob2.jpg 2x" media="(max-width:767px)">
                 <img src="./image/restaurantmob1.jpg" alt="логотип ресторану seafood" width="450" class="image">
               </picture>
               <div class="projects__overlay"><p class="projects__description">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
@@ -95,12 +95,12 @@
            </a>
         </li>
         <li class="projects__item">
-          <a href="#" class="projects__link">
+          <a href="#" class="link projects__link">
             <div class="projects__thumb">
               <picture>
-                <source srcset="./image/projectdesk1.jpg 1x, ./image/projectdesk2.jpg 2x" media="(min-width:1200px)"/>
-                <source srcset="./image/projecttab1.jpg 1x, ./image/projecttab2.jpg 2x" media="(min-width:768px)"/>
-                <source srcset="./image/projectmob1.jpg 1x, ./image/projectmob2.jpg 2x" media="(max-width:767px)"/>
+                <source srcset="./image/projectdesk1.jpg 1x, ./image/projectdesk2.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./image/projecttab1.jpg 1x, ./image/projecttab2.jpg 2x" media="(min-width:768px)">
+                <source srcset="./image/projectmob1.jpg 1x, ./image/projectmob2.jpg 2x" media="(max-width:767px)">
                 <img src="./image/projectmob1.jpg" alt="стерео навушники" width="450" class="image">
               </picture>
              <div class="projects__overlay">
@@ -113,12 +113,12 @@
           </a>
         </li>
         <li class="projects__item">
-          <a href="#" class="projects__link">
+          <a href="#" class="link projects__link">
             <div class="projects__thumb">
               <picture>
-                <source srcset="./image/projectboxesdesk1.jpg 1x, ./image/projectboxesdesk2.jpg 2x" media="(min-width:1200px)"/>
-                <source srcset="./image/projectboxestab1.jpg 1x, ./image/projectboxestab2.jpg 2x" media="(min-width:768px)"/>
-                <source srcset="./image/projectboxesmob1.jpg 1x, ./image/projectboxesmob2.jpg 2x" media="(max-width:767px)"/>
+                <source srcset="./image/projectboxesdesk1.jpg 1x, ./image/projectboxesdesk2.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./image/projectboxestab1.jpg 1x, ./image/projectboxestab2.jpg 2x" media="(min-width:768px)">
+                <source srcset="./image/projectboxesmob1.jpg 1x, ./image/projectboxesmob2.jpg 2x" media="(max-width:767px)">
                 <img src="./image/projectboxesmob1.jpg" alt="біла та розова коробки" width="450" class="image">
               </picture>
              <div class="projects__overlay">
@@ -132,12 +132,12 @@
           </a>
         </li>
         <li class="projects__item">
-          <a href="#" class="projects__link">
+          <a href="#" class="link projects__link">
             <div class="projects__thumb">
               <picture>
-                <source srcset="./image/inspirationhasnoborderdesk1.jpg 1x, ./image/inspirationhasnobordersdesk2.jpg 2x" media="(min-width:1200px)"/>
-                <source srcset="./image/inspirationhasnoborderstab1.jpg 1x, ./image/inspirationhasnoborderstab2.jpg 2x" media="(min-width:768px)"/>
-                <source srcset="./image/inspirationhasnobordersmob1.jpg 1x, ./image/inspirationhasnobordersmob2.jpg 2x" media="(max-width:767px)"/>
+                <source srcset="./image/inspirationhasnoborderdesk1.jpg 1x, ./image/inspirationhasnobordersdesk2.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./image/inspirationhasnoborderstab1.jpg 1x, ./image/inspirationhasnoborderstab2.jpg 2x" media="(min-width:768px)">
+                <source srcset="./image/inspirationhasnobordersmob1.jpg 1x, ./image/inspirationhasnobordersmob2.jpg 2x" media="(max-width:767px)">
                 <img src="./image/inspirationhasnobordersmob1.jpg" alt="екран iMac" width="450" class="image">
               </picture>
               <div class="projects__overlay">
@@ -151,12 +151,12 @@
           </a>
         </li>
         <li class="projects__item">
-          <a href="#" class="projects__link">
+          <a href="#" class="link projects__link">
             <div class="projects__thumb">
               <picture>
-                <source srcset="./image/limitededitiondesk1.jpg 1x, ./image/limitededitiondesk2.jpg 2x" media="(min-width:1200px)"/>
-                <source srcset="./image/limitededitiontab1.jpg 1x, ./image/limitededitiontab2.jpg 2x" media="(min-width:768px)"/>
-                <source srcset="./image/limitededitionmob1.jpg 1x, ./image/limitededitionmob2.jpg 2x" media="(max-width:767px)"/>
+                <source srcset="./image/limitededitiondesk1.jpg 1x, ./image/limitededitiondesk2.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./image/limitededitiontab1.jpg 1x, ./image/limitededitiontab2.jpg 2x" media="(min-width:768px)">
+                <source srcset="./image/limitededitionmob1.jpg 1x, ./image/limitededitionmob2.jpg 2x" media="(max-width:767px)">
                 <img src="./image/limitededitionmob1.jpg" alt="розворот журналу" width="450" class="image">
               </picture>
              <div class="projects__overlay">
@@ -170,12 +170,12 @@
           </a>
         </li>
         <li class="projects__item">
-          <a href="#" class="projects__link">
+          <a href="#" class="link projects__link">
             <div class="projects__thumb">
               <picture>
-                <source srcset="./image/projectlabdesk1.jpg 1x, ./image/projectlabdesk2.jpg 2x" media="(min-width:1200px)"/>
-                <source srcset="./image/projectlabtab1.jpg 1x, ./image/projectlabtab2.jpg 2x" media="(min-width:768px)"/>
-                <source srcset="./image/projectlabmob1.jpg 1x, ./image/projectlabmob2.jpg 2x" media="(max-width:767px)"/>
+                <source srcset="./image/projectlabdesk1.jpg 1x, ./image/projectlabdesk2.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./image/projectlabtab1.jpg 1x, ./image/projectlabtab2.jpg 2x" media="(min-width:768px)">
+                <source srcset="./image/projectlabmob1.jpg 1x, ./image/projectlabmob2.jpg 2x" media="(max-width:767px)">
                 <img src="./image/projectlabmob1.jpg" alt="білий ярлик з літерами" width="450" class="image">
               </picture>
              <div class="projects__overlay">
@@ -189,12 +189,12 @@
           </a>
         </li>
         <li class="projects__item">
-          <a href="#" class="projects__link">
+          <a href="#" class="link projects__link">
             <div class="projects__thumb">
               <picture>
-                <source srcset="./image/growingbusinessdesk1.jpg 1x, ./image/growingbusinessdesk2.jpg 2x" media="(min-width:1200px)"/>
-                <source srcset="./image/growingbusinesstab1.jpg 1x, ./image/growingbusinesstab2.jpg 2x" media="(min-width:768px)"/>
-                <source srcset="./image/growingbusinessmob1.jpg 1x, ./image/growingbusinessmob2.jpg 2x" media="(max-width:767px)"/>
+                <source srcset="./image/growingbusinessdesk1.jpg 1x, ./image/growingbusinessdesk2.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./image/growingbusinesstab1.jpg 1x, ./image/growingbusinesstab2.jpg 2x" media="(min-width:768px)">
+                <source srcset="./image/growingbusinessmob1.jpg 1x, ./image/growingbusinessmob2.jpg 2x" media="(max-width:767px)">
                 <img src="./image/growingbusiness.jpg" alt="людина працює за ноутбуком" width="450" class="image">
               </picture>
             <div class="projects__overlay">
